# fe2o3

./: .commit_msg.txt  .gitignore  Cargo.toml  PROGRESS.md  README.md  build_docs  commit  commit_all  deprecation_plan.md  fe2o3_overview.md  publish_test  rustfmt.toml
fe2o3_bot/: Cargo.toml  README.md
fe2o3_bot/src/: bot.rs  handles.rs  lib.rs  msg.rs
fe2o3_core/: Cargo.toml  README.md  fe2o3_core.txt
fe2o3_core/new/: Cargo.toml
fe2o3_core/src/: alt.rs  bool.rs  bot.rs  byte.rs  cfg.rs  channels.rs  conv.rs  count.rs  error.rs  file.rs  id.rs  int.rs  lib.rs  map.rs  mem.rs  ord.rs  path.rs  prelude.rs  rand.rs  string.rs  term.rs  test.rs  thread.rs  time.rs  wasm.rs
fe2o3_core/tests/: main.rs  path.rs  string.rs
fe2o3_crypto/: Cargo.toml  README.md  build.rs  validation_output_for_FIRESABER.txt
fe2o3_crypto/ref/: Signatures.ods
fe2o3_crypto/src/: command.rs  credential.rs  enc.rs  kem.rs  keys.rs  keystore.rs  lib.rs  scheme.rs  sign.rs
fe2o3_data/: Cargo.toml  README.md
fe2o3_data/src/: digraph.rs  lib.rs  ring.rs  stack.rs  time.rs  tree.rs
fe2o3_data/tests/: base2x.rs  hll.rs  iblt.rs  main.rs  path.rs  string.rs
fe2o3_datime/: Cargo.toml  README.md  TODO.md
fe2o3_datime/src/: lib.rs
fe2o3_datime/tests/: advanced_calendar_rules_demo.rs  advanced_formatter_demo.rs  advanced_validation_demo.rs  calendar.rs  clock.rs  database_integration_demo.rs  format_locale.rs  hebrew_calendar_integration.rs  iana_integration.rs  integration_demo.rs  java_calclock_parser_compatibility.rs  leap_second_demo.rs  main.rs  new_features.rs  real_time_scheduler_demo.rs  relative_date_parsing_demo.rs  rfc9557_demo.rs  time.rs  validation.rs
fe2o3_file/: Cargo.toml  README.md  create_test_tree
fe2o3_file/src/: lib.rs  tree.rs
fe2o3_file/tests/: main.rs  tree.rs
fe2o3_geom/: Cargo.toml  README.md
fe2o3_geom/src/: dim.rs  lib.rs  planar.rs  rect.rs  shape.rs
fe2o3_geom/tests/: macro.rs  shape_test.rs
fe2o3_graphics/: Cargo.toml
fe2o3_graphics/src/: blur.rs  colour.rs  lib.rs  path.rs  pixmap.rs  png.rs  prelude.rs  qr.rs  raster.rs  stroke.rs  svg.rs  transform.rs
fe2o3_graphics/tests/: png_oracle.rs  svg_oracle.rs
fe2o3_hash/: Cargo.toml  README.md
fe2o3_hash/src/: csum.rs  hash.rs  kdf.rs  lib.rs  map.rs  pow.rs  sha256.rs
fe2o3_hash/tests/: README.txt  hash.rs  main.rs  map.rs
fe2o3_iop_crypto/: Cargo.toml  README.md
fe2o3_iop_crypto/src/: enc.rs  kem.rs  keys.rs  lib.rs  sign.rs
fe2o3_iop_db/: Cargo.toml  README.md
fe2o3_iop_db/src/: api.rs  lib.rs
fe2o3_iop_hash/: Cargo.toml  README.md
fe2o3_iop_hash/src/: api.rs  csum.rs  kdf.rs  lib.rs
fe2o3_jdat/: Cargo.toml  README.md  history.txt
fe2o3_jdat/benches/: bytes.rs
fe2o3_jdat/dat_map/: Cargo.toml  TODO.md
fe2o3_jdat/src/: cfg.rs  chunk.rs  constant.rs  conv.rs  daticle.rs  file.rs  id.rs  int.rs  kind.rs  lib.rs  macros.rs  map.rs  note.rs  prelude.rs  usr.rs  version.rs
fe2o3_jdat/tests/: archive_120240424.tar.xz  byte.rs  daticle.rs  golden.rs  main.rs  map.rs  string.rs
fe2o3_mail/: Cargo.toml
fe2o3_mail/examples/: imap_probe.rs  imap_test_server.rs
fe2o3_mail/src/: lib.rs  maildir.rs  outbound.rs  passwd.rs
fe2o3_mail/tests/: imap_roundtrip.rs
fe2o3_namex/: .gitignore  Cargo.toml  README.md  namex.jdat  uri-schemes-1.ods
fe2o3_namex/src/: db.rs  id.rs  lib.rs
fe2o3_namex/tests/: file.rs  genids.rs  main.rs
fe2o3_net/: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
fe2o3_net/src/: addr.rs  charset.rs  conc.rs  constant.rs  dkim.rs  dns.rs  dns_resolver.rs  ecdsa.rs  email.rs.old  file.rs  hmac.rs  id.rs  lib.rs  llm.rs  media.rs  time.rs  tls.rs
fe2o3_net/tests/: dns.rs  email.rs  http.rs  main.rs  smtp.rs  smtp_submit.rs
fe2o3_num/: Cargo.toml  README.md
fe2o3_num/src/: float.rs  int.rs  lib.rs  macros.rs  prelude.rs  string.rs
fe2o3_num/tests/: macro.rs
fe2o3_o3db/: Cargo.toml  clean_tests  perf_record.txt  test
fe2o3_o3db/archive/: gc.rs
fe2o3_o3db/benches/: hash.rs  map.rs
fe2o3_o3db/src/: api.rs  db.rs  lib.rs
fe2o3_o3db/test_db/: config.jdat
fe2o3_o3db/tests/: basic.rs  dal.rs  main.rs  perf.rs
fe2o3_o3db_dist/: Cargo.toml
fe2o3_o3db_dist/src/: cohort.rs  config.rs  dist.rs  lib.rs  peer_set.rs  placement.rs  storage.rs  transport.rs
fe2o3_o3db_dist/tests/: anti_entropy.rs  cohort.rs  dist.rs
fe2o3_o3db_sync/: Cargo.toml  README.md  code.txt
fe2o3_o3db_sync/archive/: gc.rs
fe2o3_o3db_sync/benches/: hash.rs  map.rs
fe2o3_o3db_sync/src/: api.rs  cas.rs  cas_o3db.rs  db.rs  lib.rs  prelude.rs
fe2o3_o3db_sync/tests/: basic.rs  chunked_value.rs  dal.rs  delete_replay.rs  dist_anti_entropy.rs  dist_cohort.rs  dist_consensus.rs  dist_engine.rs  dist_hotstuff.rs  dist_o3db_storage.rs  durability.rs  idle_cpu.rs  kademlia_routing.rs  main.rs  oam_placement.rs  perf.rs  scan.rs
fe2o3_oam/: Cargo.toml
fe2o3_oam/src/: config.rs  lib.rs  threshold.rs
fe2o3_oam/tests/: placement.rs
fe2o3_red/: .gitignore  Cargo.toml
fe2o3_red/doc/: TODO.md  plan.md  plan_v1.md  proposal_browser_only.md  slice_0.md
fe2o3_red/src/: agent.rs  executor.rs  handler.rs  lib.rs  llm.rs  protocol.rs  session.rs  skills.rs  syntax.rs  tools.rs  workspace.rs
fe2o3_red/www/: index.html  red.html
fe2o3_shield/: Cargo.toml  LICENSE-BSD  README.md  TODO.md  build
fe2o3_shield/examples/: server.rs
fe2o3_shield/src/: cfg.rs  constant.rs  core.rs  keys.rs  lib.rs  main.rs  packet.rs  pow.rs  prelude.rs  schemes.rs  server.rs  session.rs  src.txt
fe2o3_shield/tests/: main.rs  msg.rs  sim.rs
fe2o3_stds/: Cargo.toml  README.md  fe2o3_stds.txt
fe2o3_stds/examples/: member_selection.rs  order_sim_usage.md
fe2o3_stds/src/: chars.rs  culture.rs  lib.rs  person_filters.rs  regions.rs
fe2o3_steel/: Cargo.toml  README  README.md  build  fe2o3_steel.txt  rustfmt.toml  test  test_old
fe2o3_steel/scripts/: steel_attach  steel_deploy  steel_deploy_prod  steel_logs  steel_probe
fe2o3_syntax/: Cargo.toml  README.md  build_repl  history.txt
fe2o3_sys/: Cargo.toml
fe2o3_test/: Cargo.toml  README.md
fe2o3_text/: Cargo.toml  README.md
(+745 files in other folders)
