[package]
name = "oxedyne_fe2o3"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "A Rust ecosystem built from first principles, providing foundational tools for building robust applications."
repository = "https://github.com/oxedyne-io/fe2o3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
	"fe2o3_*",
	"fe2o3_core/new",
	"fe2o3_jdat/dat_map",
]

[features]
default = ["core"]
all = [
	"dep:oxedyne_fe2o3_bot",
	"dep:oxedyne_fe2o3_core",
	"dep:oxedyne_fe2o3_crypto",
	"dep:oxedyne_fe2o3_data",
	"dep:oxedyne_fe2o3_datime",
	"dep:oxedyne_fe2o3_file",
	"dep:oxedyne_fe2o3_geom",
	"dep:oxedyne_fe2o3_hash",
	"dep:oxedyne_fe2o3_iop_crypto",
	"dep:oxedyne_fe2o3_iop_db",
	"dep:oxedyne_fe2o3_iop_hash",
	"dep:oxedyne_fe2o3_jdat",
	"dep:oxedyne_fe2o3_namex",
	"dep:oxedyne_fe2o3_net",
	"dep:oxedyne_fe2o3_num",
	"dep:oxedyne_fe2o3_o3db_sync",
	"dep:oxedyne_fe2o3_shield",
	"dep:oxedyne_fe2o3_stds",
	"dep:oxedyne_fe2o3_steel",
	"dep:oxedyne_fe2o3_syntax",
	"dep:oxedyne_fe2o3_test",
	"dep:oxedyne_fe2o3_text",
	"dep:oxedyne_fe2o3_tui",
	"dep:oxedyne_fe2o3_units",
]
bot 		= ["dep:oxedyne_fe2o3_bot"]
core 		= ["dep:oxedyne_fe2o3_core"]
crypto 		= ["dep:oxedyne_fe2o3_crypto"]
data 		= ["dep:oxedyne_fe2o3_data"]
datime		= ["dep:oxedyne_fe2o3_datime"]
file 		= ["dep:oxedyne_fe2o3_file"]
geom 		= ["dep:oxedyne_fe2o3_geom"]
hash 		= ["dep:oxedyne_fe2o3_hash"]
iop_crypto 	= ["dep:oxedyne_fe2o3_iop_crypto"]
iop_db 		= ["dep:oxedyne_fe2o3_iop_db"]
iop_hash 	= ["dep:oxedyne_fe2o3_iop_hash"]
jdat 		= ["dep:oxedyne_fe2o3_jdat"]
namex 		= ["dep:oxedyne_fe2o3_namex"]
net 		= ["dep:oxedyne_fe2o3_net"]
num 		= ["dep:oxedyne_fe2o3_num"]
o3db 		= ["dep:oxedyne_fe2o3_o3db_sync"]
shield 		= ["dep:oxedyne_fe2o3_shield"]
stds 		= ["dep:oxedyne_fe2o3_stds"]
steel 		= ["dep:oxedyne_fe2o3_steel"]
syntax 		= ["dep:oxedyne_fe2o3_syntax"]
test 		= ["dep:oxedyne_fe2o3_test"]
text 		= ["dep:oxedyne_fe2o3_text"]
tui 		= ["dep:oxedyne_fe2o3_tui"]
units 		= ["dep:oxedyne_fe2o3_units"]

[dependencies]
# List all Hematite crates here so that they can be re-exported in lib.rs, allowing users to import the oxedize_fe2o3 workspace from crates.  So in addition to being able to import individual crates,:
#
#  use oxedyne_fe2o3_core::prelude::*;
#
# users can also do this:
#
#  use oxedize_fe2o3::core::prelude::*;
#
oxedyne_fe2o3_bot =         { path = "fe2o3_bot",			optional = true }
oxedyne_fe2o3_core =        { path = "fe2o3_core",			optional = true }
oxedyne_fe2o3_crypto =      { path = "fe2o3_crypto",		optional = true }
oxedyne_fe2o3_data =        { path = "fe2o3_data",			optional = true }
oxedyne_fe2o3_datime =      { path = "fe2o3_datime",		optional = true }
oxedyne_fe2o3_file =        { path = "fe2o3_file",			optional = true }
oxedyne_fe2o3_geom =        { path = "fe2o3_geom",			optional = true }
oxedyne_fe2o3_hash =        { path = "fe2o3_hash",			optional = true }
oxedyne_fe2o3_iop_crypto =  { path = "fe2o3_iop_crypto",	optional = true }
oxedyne_fe2o3_iop_db =      { path = "fe2o3_iop_db",		optional = true }
oxedyne_fe2o3_iop_hash =    { path = "fe2o3_iop_hash",		optional = true }
oxedyne_fe2o3_jdat =        { path = "fe2o3_jdat",			optional = true }
oxedyne_fe2o3_namex =       { path = "fe2o3_namex",			optional = true }
oxedyne_fe2o3_net =         { path = "fe2o3_net",			optional = true }
oxedyne_fe2o3_num =         { path = "fe2o3_num",			optional = true }
oxedyne_fe2o3_o3db_sync =   { path = "fe2o3_o3db_sync",		optional = true }
oxedyne_fe2o3_shield =      { path = "fe2o3_shield",		optional = true }
oxedyne_fe2o3_stds =        { path = "fe2o3_stds",			optional = true }
oxedyne_fe2o3_steel =       { path = "fe2o3_steel",			optional = true }
oxedyne_fe2o3_syntax =      { path = "fe2o3_syntax",		optional = true }
oxedyne_fe2o3_test =        { path = "fe2o3_test",			optional = true }
oxedyne_fe2o3_text =        { path = "fe2o3_text",			optional = true }
oxedyne_fe2o3_tui =         { path = "fe2o3_tui",			optional = true }
oxedyne_fe2o3_units =       { path = "fe2o3_units",			optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7.2"
rand_core = { version = "0.5.1", features = ["std"] }
cap = "0.1.0"

[[bench]]
name = "maps"
harness = false

[[bench]]
name = "encoding"
harness = false
