[package]
name = "oxedize_fe2o3_core"
version = "0.5.0"
authors = ["h00gs <hello@oxedize.com>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite core library, consisting mostly of relatively simple foundational types and macros."
repository = "https://github.com/Oxedize/fe2o3"

[dependencies]
new							= { path = "new" }

base64 = "0.13.0"
flume = "0.10.9" 
rand = { version = "0.8.4" }
rand_core = { version = "0.6.3", features = ["std"] }

# Logging.
flate2 = "1.0"
humantime = "2.1.0"
once_cell = "1.18.0"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
