[package]
name = "oxedize_fe2o3_data"
version = "0.5.0"
authors = ["h00gs <hello@oxedize.com>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite specialised data structures library."
repository = "https://github.com/Oxedize/fe2o3"

[dependencies]
oxedize_fe2o3_core 		   		= { path = "../fe2o3_core" }
oxedize_fe2o3_jdat 		   		= { path = "../fe2o3_jdat" }

[dev-dependencies]
oxedize_fe2o3_text 		   		= { path = "../fe2o3_text" }

base64 = "0.22.1"
