[package]
name = "oxedyne_fe2o3_datime"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite date/time library - comprehensive calendar and clock handling with JDAT and namex integration."
repository = "https://github.com/oxedyne-io/fe2o3"

[dependencies]
oxedyne_fe2o3_core		= { path = "../fe2o3_core" }
oxedyne_fe2o3_data		= { path = "../fe2o3_data" }
oxedyne_fe2o3_jdat		= { path = "../fe2o3_jdat" }
oxedyne_fe2o3_namex		= { path = "../fe2o3_namex" }
oxedyne_fe2o3_num		= { path = "../fe2o3_num" }
oxedyne_fe2o3_stds		= { path = "../fe2o3_stds" }

[dev-dependencies]
