[package]
name = "oxedize_fe2o3_namex"
version = "0.5.0"
authors = ["h00gs <hello@oxedize.com>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite universal NAME codeX library, for naming all the things."
repository = "https://github.com/Oxedize/fe2o3"

[dependencies]
oxedize_fe2o3_core 		   		= { path = "../fe2o3_core" }
oxedize_fe2o3_jdat 				= { path = "../fe2o3_jdat" }
oxedize_fe2o3_text 				= { path = "../fe2o3_text" }

base64 = "0.13.0"
num-derive = "0.3.0"
num-traits = "0.2.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
