[package]
name = "oxedyne_fe2o3_net"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite networking library."
repository = "https://github.com/oxedyne-io/fe2o3"

[dependencies]
oxedyne_fe2o3_bot 					= { path = "../fe2o3_bot" }
oxedyne_fe2o3_core 					= { path = "../fe2o3_core" }
oxedyne_fe2o3_crypto				= { path = "../fe2o3_crypto" }
oxedyne_fe2o3_data 					= { path = "../fe2o3_data" }
oxedyne_fe2o3_jdat 					= { path = "../fe2o3_jdat" }
oxedyne_fe2o3_hash 					= { path = "../fe2o3_hash" }
oxedyne_fe2o3_iop_crypto			= { path = "../fe2o3_iop_crypto" }
oxedyne_fe2o3_iop_db 				= { path = "../fe2o3_iop_db" }
oxedyne_fe2o3_iop_hash 				= { path = "../fe2o3_iop_hash" }
oxedyne_fe2o3_stds 					= { path = "../fe2o3_stds" }
oxedyne_fe2o3_syntax				= { path = "../fe2o3_syntax" }
oxedyne_fe2o3_text					= { path = "../fe2o3_text" }

base64 = "0.13.0"
chrono = "0.4"
secrecy = "0.8.0"
sha1 = "0.10.6"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.25"

[dev-dependencies]
oxedyne_fe2o3_data 					= { path = "../fe2o3_data" }
