[package]
name = "oxedyne_fe2o3_num"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite numerical library."
repository = "https://github.com/oxedyne-io/fe2o3"

[dependencies]
oxedyne_fe2o3_core 		   		= { path = "../fe2o3_core" }

bigdecimal = "0.2.0"
num-bigint = "0.3"

[dev-dependencies]
rand_core = { version = "0.6.3", features = ["std"] }
