[package]
name = "oxedize_fe2o3_o3db"
version = "0.5.0"
authors = ["h00gs <hello@oxedize.com>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite library for the Ozone database (o3db), a key-value store inspired by BitCask, designed for high throughput." 
repository = "https://github.com/Oxedize/fe2o3"

[dependencies]
oxedize_fe2o3_bot 		   		= { path = "../fe2o3_bot" }
oxedize_fe2o3_core 		   		= { path = "../fe2o3_core" }
oxedize_fe2o3_crypto 			= { path = "../fe2o3_crypto" }
oxedize_fe2o3_data 		   		= { path = "../fe2o3_data" }
oxedize_fe2o3_hash 				= { path = "../fe2o3_hash" }
oxedize_fe2o3_iop_crypto		= { path = "../fe2o3_iop_crypto" }
oxedize_fe2o3_iop_db			= { path = "../fe2o3_iop_db" }
oxedize_fe2o3_iop_hash 			= { path = "../fe2o3_iop_hash" }
oxedize_fe2o3_jdat 				= { path = "../fe2o3_jdat" }
oxedize_fe2o3_net 				= { path = "../fe2o3_net" }
oxedize_fe2o3_num 				= { path = "../fe2o3_num" }
oxedize_fe2o3_syntax 			= { path = "../fe2o3_syntax" }
oxedize_fe2o3_stds 				= { path = "../fe2o3_stds" }
oxedize_fe2o3_test 				= { path = "../fe2o3_test" }
oxedize_fe2o3_text 				= { path = "../fe2o3_text" }
oxedize_fe2o3_namex				= { path = "../fe2o3_namex" }

crossbeam-utils = "0.8.5"
hostname = "0.3.1"
humantime = "2.1.0"
lazy_static = "1.4.0"
num_cpus = "1.0"
rand = "0.8.5"
rand_core = { version = "0.6.3", features = ["std"] }
regex = "1.5"
secrecy = "0.8.0"
seahash = "4.0.1"

[dev-dependencies]
oxedize_fe2o3_test 				= { path = "../fe2o3_test" }
