[package]
name = "oxedyne_fe2o3_o3db_dist"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite distributed Ozone -- peer-to-peer replication layer for the Ozone KV database."
repository = "https://github.com/oxedyne-io/fe2o3"

[dependencies]
oxedyne_fe2o3_core				= { path = "../fe2o3_core" }
oxedyne_fe2o3_hll				= { path = "../fe2o3_hll" }
oxedyne_fe2o3_iblt				= { path = "../fe2o3_iblt" }
oxedyne_fe2o3_kademlia			= { path = "../fe2o3_kademlia" }
oxedyne_fe2o3_oam				= { path = "../fe2o3_oam" }
