[package]
name = "oxedyne_fe2o3_o3db_sync"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite library for the Ozone database (o3db), a key-value store inspired by BitCask, designed for high throughput."
repository = "https://github.com/oxedyne-io/fe2o3"

[features]
# Peer-to-peer distributed Ozone: OAM placement, IBLT anti-entropy,
# HotStuff consensus for strong-consistency tables. Disabled by default
# -- enable when your application needs replication across peers.
dist = [
	"dep:oxedyne_fe2o3_hll",
	"dep:oxedyne_fe2o3_iblt",
	"dep:oxedyne_fe2o3_kademlia",
	"dep:oxedyne_fe2o3_oam",
]

[dependencies]
oxedyne_fe2o3_bot 		   		= { path = "../fe2o3_bot" }
oxedyne_fe2o3_core 		   		= { path = "../fe2o3_core" }
oxedyne_fe2o3_crypto 			= { path = "../fe2o3_crypto" }
oxedyne_fe2o3_data 		   		= { path = "../fe2o3_data" }
oxedyne_fe2o3_hash 				= { path = "../fe2o3_hash" }
oxedyne_fe2o3_iop_crypto		= { path = "../fe2o3_iop_crypto" }
oxedyne_fe2o3_iop_db			= { path = "../fe2o3_iop_db" }
oxedyne_fe2o3_iop_hash 			= { path = "../fe2o3_iop_hash" }
oxedyne_fe2o3_jdat 				= { path = "../fe2o3_jdat" }
oxedyne_fe2o3_net 				= { path = "../fe2o3_net" }
oxedyne_fe2o3_num 				= { path = "../fe2o3_num" }
oxedyne_fe2o3_syntax 			= { path = "../fe2o3_syntax" }
oxedyne_fe2o3_stds 				= { path = "../fe2o3_stds" }
oxedyne_fe2o3_test 				= { path = "../fe2o3_test" }
oxedyne_fe2o3_text 				= { path = "../fe2o3_text" }
oxedyne_fe2o3_namex				= { path = "../fe2o3_namex" }

# Distributed-mode dependencies. Gated behind the `dist` feature so that
# local-only callers do not pull the peer-to-peer primitive graph in.
oxedyne_fe2o3_hll				= { path = "../fe2o3_hll",		optional = true }
oxedyne_fe2o3_iblt				= { path = "../fe2o3_iblt",		optional = true }
oxedyne_fe2o3_kademlia			= { path = "../fe2o3_kademlia",	optional = true }
oxedyne_fe2o3_oam				= { path = "../fe2o3_oam",		optional = true }

crossbeam-utils = "0.8.5"
hostname = "0.3.1"
humantime = "2.1.0"
lazy_static = "1.4.0"
num_cpus = "1.0"
rand = "0.8.5"
rand_core = { version = "0.6.3", features = ["std"] }
regex = "1.5"
secrecy = "0.8.0"
seahash = "4.0.1"

[dev-dependencies]
oxedyne_fe2o3_test 				= { path = "../fe2o3_test" }
