[package]
name = "oxedize_fe2o3_shield"
version = "0.5.0"
authors = ["h00gs <hello@oxedize.com>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite library for the Signed Hash In Every Little Datagram (SHIELD) networking protocol."
repository = "https://github.com/Oxedize/fe2o3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shield"
path = "src/main.rs"

[dependencies]
oxedize_fe2o3_bot 				= { path = "../fe2o3_bot" }
oxedize_fe2o3_core 				= { path = "../fe2o3_core" }
oxedize_fe2o3_crypto 			= { path = "../fe2o3_crypto" }
oxedize_fe2o3_data 				= { path = "../fe2o3_data" }
oxedize_fe2o3_jdat 				= { path = "../fe2o3_jdat" }
oxedize_fe2o3_hash 				= { path = "../fe2o3_hash" }
oxedize_fe2o3_iop_db			= { path = "../fe2o3_iop_db" }
oxedize_fe2o3_iop_crypto		= { path = "../fe2o3_iop_crypto" }
oxedize_fe2o3_iop_hash 			= { path = "../fe2o3_iop_hash" }
oxedize_fe2o3_net 			   	= { path = "../fe2o3_net" }
oxedize_fe2o3_namex				= { path = "../fe2o3_namex" }
oxedize_fe2o3_o3db_sync				= { path = "../fe2o3_o3db_sync" }
oxedize_fe2o3_syntax 			= { path = "../fe2o3_syntax" }
oxedize_fe2o3_stds 				= { path = "../fe2o3_stds" }
oxedize_fe2o3_text 				= { path = "../fe2o3_text" }
oxedize_fe2o3_tui 				= { path = "../fe2o3_tui" }

# App.
crossterm = "0.27"
rpassword = "5.0.1"
secrecy = "0.8.0"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }

#lettre = "0.10.0-rc.3"
local-ip-address = "0.5.6"
num_cpus = "1.0"
rand = "0.8.5"
rand_core = { version = "0.6.3", features = ["std"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
oxedize_fe2o3_test 				= { path = "../fe2o3_test" }
base64 = "0.13.0"
rand_core = { version = "0.6.3", features = ["std"] }
