[package]
name = "oxedyne_fe2o3_shield"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite library for the Signed Hash In Every Little Datagram (SHIELD) networking protocol."
repository = "https://github.com/oxedyne-io/fe2o3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shield"
path = "src/main.rs"

[dependencies]
oxedyne_fe2o3_bot 				= { path = "../fe2o3_bot" }
oxedyne_fe2o3_core 				= { path = "../fe2o3_core" }
oxedyne_fe2o3_crypto 			= { path = "../fe2o3_crypto" }
oxedyne_fe2o3_data 				= { path = "../fe2o3_data" }
oxedyne_fe2o3_jdat 				= { path = "../fe2o3_jdat" }
oxedyne_fe2o3_hash 				= { path = "../fe2o3_hash" }
oxedyne_fe2o3_iop_db			= { path = "../fe2o3_iop_db" }
oxedyne_fe2o3_iop_crypto		= { path = "../fe2o3_iop_crypto" }
oxedyne_fe2o3_iop_hash 			= { path = "../fe2o3_iop_hash" }
oxedyne_fe2o3_net 			   	= { path = "../fe2o3_net" }
oxedyne_fe2o3_namex				= { path = "../fe2o3_namex" }
oxedyne_fe2o3_o3db_sync				= { path = "../fe2o3_o3db_sync" }
oxedyne_fe2o3_syntax 			= { path = "../fe2o3_syntax" }
oxedyne_fe2o3_stds 				= { path = "../fe2o3_stds" }
oxedyne_fe2o3_text 				= { path = "../fe2o3_text" }
oxedyne_fe2o3_tui 				= { path = "../fe2o3_tui" }

# App.
crossterm = "0.27"
rpassword = "5.0.1"
secrecy = "0.8.0"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }

#lettre = "0.10.0-rc.3"
local-ip-address = "0.5.6"
num_cpus = "1.0"
rand = "0.8.5"
rand_core = { version = "0.6.3", features = ["std"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
oxedyne_fe2o3_test 				= { path = "../fe2o3_test" }
base64 = "0.13.0"
rand_core = { version = "0.6.3", features = ["std"] }
