[package]
name = "oxedize_fe2o3_stds"
version = "0.5.0"
authors = ["h00gs <hello@oxedize.com>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite standards library."
repository = "https://github.com/Oxedize/fe2o3"

[dependencies]
oxedize_fe2o3_core = { path = "../fe2o3_core" }
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
